--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,168 @@
-.left {
-	text-align: left;
+/*LOGIN PAGE START*/
+
+.login-form {
+    text-align: center;
+    width: 80%;
+    margin: 60px auto 0;
 }
+
+input[type=email],
+input[type=password] {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    outline: none;
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.login-button {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.forgot-password {
+    display: block;
+    margin: 8px auto 0 auto;
+    font-size: 14px;
+}
+/*LOGIN PAGE END*/
+/*TEST PAGE START*/
+
+.page--shop-details__content {
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: 0px !important;
+    bottom: 0px;
+}
+
+.card {
+    background-color: white;
+    background-image: url(../images/sushi-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    height: 250px;
+}
+
+.card-toolbar ons-back-button span {
+    color: white;
+}
+
+.card-name {
+    font-weight: 600;
+    font-size: 20px;
+    padding: 66px 0 8px 0;
+    text-align: center;
+}
+
+.card-desc {
+    font-size: 14px;
+    font-weight: 400;
+    opacity: 0.9;
+    text-align: center;
+    line-height: 1.4;
+}
+
+.rating {
+    text-align: center;
+    position: relative;
+    height: 0px;
+}
+
+.rating-num {
+    position: relative;
+    top: -24px;
+    height: 24px;
+    color: white;
+    line-height: 24px;
+    font-size: 12px;
+    font-weight: 600;
+    text-align: center;
+    border-radius: 4px 4px 0 0;
+    padding: 0 6px;
+    background-color: #eb482f;
+    color: white;
+    width: auto;
+    margin: 0 auto 0 auto;
+    display: inline-block;
+}
+
+.rating-num ons-icon {
+    font-size: 11px;
+    vertical-align: -0px;
+}
+
+.action-col {
+    text-align: center;
+    opacity: 0.4;
+    padding: 10px 0 8px;
+}
+
+.action-col:active {
+    opacity: 0.7;
+}
+
+.action-col ons-button {
+    padding: 0;
+    line-height: 1;
+}
+
+.action-icon {
+    padding: 0 0 4px 0;
+}
+
+.action-icon ons-icon {
+    font-size: 28px;
+}
+
+.action-label {
+    font-size: 12px;
+}
+
+.prop-desc {
+    font-size: 14px;
+    opacity: 0.7;
+}
+
+.prop-desc ons-icon {
+    font-size: 14px;
+    vertical-align: -0px;
+    opacity: 0.5;
+}
+/*TEST PAGE END*/
+/*TEST2 PAGE START*/
+
+.to-wrapper {
+    line-height: 1;
+    height: 62px;
+    padding: 10px;
+}
+
+.to-image {
+    width: 42px;
+    height: 42px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+}
+
+.to-name {
+    font-weight: 500;
+    font-size: 17px;
+    margin-bottom: 4px;
+}
+
+.to-email {
+    font-size: 14px;
+    opacity: 0.4;
+}
+
+.text-input {
+    margin-top: 4px;
+}
+
+.textarea {
+    margin-top: 4px;
+}
+/*TEST2 PAGE END*/
