--- a/templates/tabs/tabs.html
+++ b/templates/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ons-page>
-    <ons-tabbar hide-tabs="{{ $root.hideTabs }}">
-        <ons-tab page="templates/test1/test1.html" icon="fa-square" label="test1" active="true"></ons-tab>
-        <ons-tab page="page2.html" icon="fa-square" label="test2"></ons-tab>
-        <ons-tab page="page3.html" icon="fa-square" label="test3"></ons-tab>
+    <ons-tabbar hide-tabs="{{ $root.hideTabs }}" animation="fade">
+        <ons-tab page="templates/tab1/navigator.html" icon="ion-locked" label="tab1" active="true"></ons-tab>
+        <ons-tab page="templates/tab2/tab2.html" icon="ion-wineglass" label="tab2"></ons-tab>
+        <ons-tab page="templates/tab3/tab3.html" icon="ion-mouse" label="tab3"></ons-tab>
     </ons-tabbar>
 </ons-page>
