--- a/styles/app.css
+++ b/styles/app.css
@@ -27,111 +27,7 @@ input[type=password] {
     font-size: 14px;
 }
 /*LOGIN PAGE END*/
-/*TEST PAGE START*/
 
-.page--shop-details__content {
-    position: absolute;
-    left: 0px;
-    right: 0px;
-    top: 0px !important;
-    bottom: 0px;
-}
-
-.card {
-    background-color: white;
-    background-image: url(../images/sushi-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    height: 250px;
-}
-
-.card-toolbar ons-back-button span {
-    color: white;
-}
-
-.card-name {
-    font-weight: 600;
-    font-size: 20px;
-    padding: 66px 0 8px 0;
-    text-align: center;
-}
-
-.card-desc {
-    font-size: 14px;
-    font-weight: 400;
-    opacity: 0.9;
-    text-align: center;
-    line-height: 1.4;
-}
-
-.rating {
-    text-align: center;
-    position: relative;
-    height: 0px;
-}
-
-.rating-num {
-    position: relative;
-    top: -24px;
-    height: 24px;
-    color: white;
-    line-height: 24px;
-    font-size: 12px;
-    font-weight: 600;
-    text-align: center;
-    border-radius: 4px 4px 0 0;
-    padding: 0 6px;
-    background-color: #eb482f;
-    color: white;
-    width: auto;
-    margin: 0 auto 0 auto;
-    display: inline-block;
-}
-
-.rating-num ons-icon {
-    font-size: 11px;
-    vertical-align: -0px;
-}
-
-.action-col {
-    text-align: center;
-    opacity: 0.4;
-    padding: 10px 0 8px;
-}
-
-.action-col:active {
-    opacity: 0.7;
-}
-
-.action-col ons-button {
-    padding: 0;
-    line-height: 1;
-}
-
-.action-icon {
-    padding: 0 0 4px 0;
-}
-
-.action-icon ons-icon {
-    font-size: 28px;
-}
-
-.action-label {
-    font-size: 12px;
-}
-
-.prop-desc {
-    font-size: 14px;
-    opacity: 0.7;
-}
-
-.prop-desc ons-icon {
-    font-size: 14px;
-    vertical-align: -0px;
-    opacity: 0.5;
-}
-/*TEST PAGE END*/
 /*TEST2 PAGE START*/
 
 .to-wrapper {
@@ -274,3 +170,155 @@ input[type=password] {
   font-size: 12px;
   line-height: 1.4;
 }
+
+/*TAB1 START */
+.list-item-container {
+  line-height: 1;
+  font-size: 14px;
+  padding: 15px 0px 15px 15px;
+}
+
+.list-item-left {
+  width: 60px;
+  margin-right: -60px;
+  float: left;
+}
+
+.list-item-right {
+  width: 100%;
+  float: right;
+}
+
+.list-item-content {
+  margin-left: 50px;
+  margin-right: 30px;
+}
+
+.avator {
+  width: 40px;
+  height: 40px;
+  border-radius: 3px;
+  -webkit-border-radius: 3px;
+}
+
+.name {
+  font-weight: 500;
+  line-height: 16px;
+  font-size: 15px;
+  margin-bottom: 6px;
+}
+
+.desc {
+  line-height: 16px;
+}
+
+.lucent {
+  opacity: 0.4;
+}
+/*TAB1 END*/
+
+/*testpage start*/
+
+.page--shop-details__content {
+  position: absolute;
+  left: 0px;
+  right: 0px;
+  top: 0px !important;
+  bottom: 0px;
+}
+
+.card {
+  background-color: white;
+  background-image: url(../images/sushi-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  height: 250px;
+}
+
+.card-toolbar ons-back-button span {
+  color: white;
+}
+
+.card-name {
+  font-weight: 600;
+  font-size: 20px;
+  padding: 66px 0 8px 0;
+  text-align: center;
+}
+
+.card-desc {
+  font-size: 14px;
+  font-weight: 400;
+  opacity: 0.9;
+  text-align: center;
+  line-height: 1.4;
+}
+
+.rating {
+  text-align: center;
+  position: relative;
+  height: 0px;
+}
+
+.rating-num {
+  position: relative;
+  top: -24px;
+  height: 24px;
+  color: white;
+  line-height: 24px;
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 4px 4px 0 0;
+  padding: 0 6px;
+  background-color: #eb482f;
+  color: white;
+  width: auto;
+  margin: 0 auto 0 auto;
+  display: inline-block;
+}
+
+.rating-num ons-icon {
+  font-size: 11px;
+  vertical-align: -0px;
+}
+
+.action-col {
+  text-align: center;
+  opacity: 0.4;
+  padding: 10px 0 8px;
+}
+
+.action-col:active {
+  opacity: 0.7;
+}
+
+.action-col ons-button {
+  padding: 0;
+  line-height: 1;
+}
+
+.action-icon {
+  padding: 0 0 4px 0;
+}
+
+.action-icon ons-icon {
+  font-size: 28px;
+}
+
+.action-label {
+  font-size: 12px;
+}
+
+.prop-desc {
+  font-size: 14px;
+  opacity: 0.7;
+}
+
+.prop-desc ons-icon {
+  font-size: 14px;
+  vertical-align: -0px;
+  opacity: 0.5;
+}
+/*testpage end*/
