--- a/templates/tab1/tab1.html
+++ b/templates/tab1/tab1.html
@@ -1,99 +1,45 @@
-<ons-page modifier="shop-details">
-        <ons-toolbar modifier="transparent">
-            <div class="right">
-                <ons-toolbar-button ng-click="NextPage()">
-                    <ons-icon icon="ion-plus-circled" style="color: white; font-size: 28px;" fixed-width="false"></ons-icon>
-                </ons-toolbar-button>
+<ons-page ng-controller="tab1Controller">
+
+    <ons-toolbar>
+        <div class="center">List with Mini Pictures</div>
+        <div class="right">
+            <ons-toolbar-button ng-click="AddPage();">
+              <ons-icon icon="ion-plus" fixed-width="false" style="vertical-align: -4px;"></ons-icon>
+            </ons-toolbar-button>
+          </div>
+    </ons-toolbar>
+
+    <ons-pull-hook ng-action="load($done)" var="tab1_loader_avatar">
+        <span ng-switch="tab1_loader_avatar.getCurrentState()">
+          <span ng-switch-when="initial"><ons-icon size="35px" icon="ion-arrow-down-a"></ons-icon> 請往下拉</span>
+          <span ng-switch-when="preaction"><ons-icon size="35px" icon="ion-arrow-up-a"></ons-icon> 請放開我</span>
+          <span ng-switch-when="action"><ons-icon size="35px" spin="true" icon="ion-load-d"></ons-icon> 讀取中</span>
+        </span>
+      </ons-pull-hook>
+    
+    
+    <ons-list>
+        <ons-list-item ng-show="items.length === 0">
+          <div class="info">
+            現在沒有資料
+          </div>
+        </ons-list-item>
+
+        <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="item in items">
+            <div class="list-item-left">
+                <img src="http://fakeimg.pl/100x100/" class="avator">
             </div>
-            <div class="left">
-                <ons-toolbar-button>
-                    <ons-icon icon="ion-arrow-left-c" style="color: white; font-size: 28px;" fixed-width="false"></ons-icon>
-                </ons-toolbar-button>
+            <div class="list-item-right">
+                <div class="list-item-content">
+                    <div class="name">TestUser
+                        <span class="lucent">@hello</span>
+                    </div>
+
+                    <span class="desc">{{item.desc}}</span>
+                </div>
             </div>
-        </ons-toolbar>
+        </ons-list-item>
 
-        <div class="card">
-
-            <div class="card-name">Onsen Sushi</div>
-            <div class="card-desc">Traditional Japanese Sushi
-                <br>Open until 10:30pm</div>
-
-        </div>
-
-        <div class="rating">
-            <div class="rating-num">
-                <ons-icon icon="fa-star" fixed-width="false"></ons-icon>
-                <ons-icon icon="fa-star" fixed-width="false"></ons-icon>
-                <ons-icon icon="fa-star" fixed-width="false"></ons-icon>
-                <ons-icon icon="fa-star" fixed-width="false"></ons-icon>
-                <ons-icon icon="fa-star-half" fixed-width="false"></ons-icon>
-                4.5
-            </div>
-        </div>
-
-        <ons-list style="border-top: none">
-            <ons-list-item style="line-height: 1; padding: 0;">
-                <ons-row class="action">
-
-                    <ons-col class="action-col">
-                        <div class="action-icon">
-                            <ons-icon icon="ion-ios7-star-half"></ons-icon>
-                        </div>
-                        <div class="action-label">Rate</div>
-                    </ons-col>
-
-                    <ons-col class="action-col">
-                        <div class="action-icon">
-                            <ons-icon icon="ion-bookmark"></ons-icon>
-                        </div>
-                        <div class="action-label">Favorite</div>
-                    </ons-col>
-
-                    <ons-col class="action-col">
-                        <div class="action-icon">
-                            <ons-icon icon="ion-share"></ons-icon>
-                        </div>
-                        <div class="action-label">Share</div>
-                    </ons-col>
-
-                    <ons-col class="action-col">
-                        <div class="action-icon">
-                            <ons-icon icon="ion-compose"></ons-icon>
-                        </div>
-                        <div class="action-label">Check In</div>
-                    </ons-col>
-
-                </ons-row>
-            </ons-list-item>
-        </ons-list>
-
-        <ons-list style="margin-top: 12px;">
-            <ons-list-item modifier="chevron">
-                <div class="prop-desc">
-                    <ons-icon icon="fa-map-marker"></ons-icon>
-                    2-15-13 Hongo Bunkyo Tokyo
-                </div>
-            </ons-list-item>
-
-            <ons-list-item modifier="chevron">
-                <div class="prop-desc">
-                    <ons-icon icon="fa-mobile"></ons-icon>
-                    (111) 123-4567
-                </div>
-            </ons-list-item>
-
-            <ons-list-item modifier="chevron">
-                <div class="prop-desc">
-                    <ons-icon icon="fa-book"></ons-icon>
-                    Store Photos and Menus
-                </div>
-            </ons-list-item>
-
-            <ons-list-item modifier="chevron">
-                <div class="prop-desc">
-                    <ons-icon icon="fa-clock-o"></ons-icon>
-                    Make a Reservation
-                </div>
-            </ons-list-item>
-        </ons-list>
-    </ons-page>
+        
+    </ons-list>
+</ons-page>
