--- a/templates/tab2/tab2.html
+++ b/templates/tab2/tab2.html
@@ -31,8 +31,12 @@
             </div>
         </div>
 
-        <ons-list class="plan-list">
-            <ons-list-item modifier="chevron" class="plan" ng-repeat="a in [1,2,3,4,5,6,7,8,9,10]">
+
+        <ons-carousel  swipeable overscrollable auto-scroll style="height:100%;">
+            <ons-carousel-item>
+                <ons-list class="plan-list">
+            
+            <ons-list-item modifier="chevron" class="plan" ng-repeat="a in [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15]">
                 <ons-row>
                     <ons-col width="80px" class="plan-left">
                         <div class="plan-date">5:30 PM</div>
@@ -59,6 +63,11 @@
             </ons-list-item>
 
         </ons-list>
+            </ons-carousel-item>
+            <ons-carousel-item>
+                Carousel Item 2
+            </ons-carousel-item>
+        </ons-carousel>
 
     </ons-page>
 </ons-navigator>
