--- a/templates/drink_menu/drinkmenu.html
+++ b/templates/drink_menu/drinkmenu.html
@@ -1,13 +1,141 @@
 <ons-page ng-controller="drinkmenu">
     <ons-toolbar>
-        <div class="left"><ons-back-button>Back</ons-back-button></div>
+        <div class="left">
+            <ons-back-button>Back</ons-back-button>
+        </div>
         <div class="center">菜單</div>
+        <div class="right">
+          <ons-toolbar-button ng-click="caculate()" modifier="outline">統計</ons-toolbar-button>
+        </div>
     </ons-toolbar>
+    
+    <div class="notify info"><span>飲品項目、價格以實際店家為準</span><span>如果你發現項目價格有所不同，可以點選左邊的紙飛機回報給我們知道。</span><i class="ion-paper-airplane"></i></div>
 
-    <ons-list modifier="inset"> 
-    <ons-list-header>茶類</ons-list-header>
-        <ons-list-item>紅茶</ons-list-item>
-        <ons-list-item>綠茶</ons-list-item>
-        <ons-list-item>青茶</ons-list-item>
+    <ons-list modifier="inset">
+
+        <ons-list-item class="drink-item" ng-repeat="drink in fake_drink" modifier="tappable">
+            {{drink.name}}
+            <span class="list-item-note lucent">中杯:{{drink.price[0]}} 大杯:{{drink.price[1]}}</span>
+            <span class="list-item-action">
+                <ons-icon ng-click="add_drink(drink)" icon="ion-plus-circled" size="30px">
+                </ons-icon>
+            </span>
+            <div class="list__item list__item--inset note" ng-repeat=" select in selection[drink.id]">
+                <span class="list-item-deleteicon">
+                <ons-icon ng-click="deleteSelection(drink.id,select)" icon="ion-minus-circled" size="22px">
+                </ons-icon>
+            </span>
+                {{select.number}}杯 {{select.cup | cup}} {{select.sugar | sugar}} {{select.ice | ice}}
+                
+            </div>
+        </ons-list-item>
+
     </ons-list>
+
+
+    <ons-modal var="drinkmenu_modal">
+        <div class="dialog drink_menu_dialog">
+            <div class="page">
+                <div class="navigation-bar">
+                    <div class="navigation-bar__left">
+                    </div>
+
+                    <div class="navigation-bar__center">
+                        甜度冰塊選擇
+                    </div>
+
+                    <div class="navigation-bar__right" onclick="drinkmenu_modal.hide();">
+                        <span class="toolbar-button--quiet navigation-bar__line-height">取消</span>
+                    </div>
+                </div>
+                <div class="content">
+                    <div>數量（杯）</div>
+                    <div class="button-bar">
+                        <div class="button-bar__item">
+                            <input type="radio" name="number" ng-model="number" value="1" checked>
+                            <button class="button-bar__button">1</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="number" ng-model="number" value="2">
+                            <button class="button-bar__button">2</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="number" ng-model="number" value="3">
+                            <button class="button-bar__button">3</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="number" ng-model="number" value="4">
+                            <button class="button-bar__button">4</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="number" ng-model="number" value="5">
+                            <button class="button-bar__button">5</button>
+                        </div>
+                    </div>
+
+                    <div>容量</div>
+                    <div class="button-bar">
+                        <div class="button-bar__item">
+                            <input type="radio" name="cup" checked ng-model="cup" value="m">
+                            <button class="button-bar__button">中杯</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="cup" ng-model="cup" value="l">
+                            <button class="button-bar__button">大杯</button>
+                        </div>
+                    </div>
+
+                    <div>甜度</div>
+                    <div class="button-bar">
+                        <div class="button-bar__item">
+                            <input type="radio" name="sugar" checked ng-model="sugar" value="0">
+                            <button class="button-bar__button">正常</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="sugar" ng-model="sugar" value="1">
+                            <button class="button-bar__button">少糖</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="sugar" ng-model="sugar" value="2">
+                            <button class="button-bar__button">半糖</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="sugar" ng-model="sugar" value="3">
+                            <button class="button-bar__button">微糖</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="sugar" ng-model="sugar" value="4">
+                            <button class="button-bar__button">無糖</button>
+                        </div>
+                    </div>
+
+                    <div>冰塊</div>
+                    <div class="button-bar">
+                        <div class="button-bar__item">
+                            <input type="radio" name="ice" checked ng-model="ice" value="0">
+                            <button class="button-bar__button">正常</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="ice" ng-model="ice" value="1">
+                            <button class="button-bar__button">少冰</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="ice" ng-model="ice" value="2">
+                            <button class="button-bar__button">去冰</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="ice" ng-model="ice" value="3">
+                            <button class="button-bar__button">常溫</button>
+                        </div>
+                        <div class="button-bar__item">
+                            <input type="radio" name="ice" ng-model="ice" value="4">
+                            <button class="button-bar__button">溫</button>
+                        </div>
+                    </div>
+                    <button class="button" ng-click="selectOver();">選好了</button>
+
+                </div>
+            </div>
+        </div>
+    </ons-modal>
 </ons-page>
