--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -1,30 +1,30 @@
-<ons-page>
-     
-      <div class="formarea">
+<ons-page ng-controller="signup">
+
+    <div class="formarea">
 
         <div class="form-row">
-          <input type="text" class="text-input--underbar width-full" placeholder="姓名" value="">
-        </div>
-          
-          <div class="form-row">
-          <input type="email" class="text-input--underbar width-full" placeholder="Email" value="">
+            <input type="text" class="text-input--underbar width-full" placeholder="姓名" ng-model="signup_input.nickname">
         </div>
 
         <div class="form-row">
-          <input type="password" class="text-input--underbar width-full" placeholder="設定密碼" value="">
+            <input type="text" class="text-input--underbar width-full" placeholder="Email" ng-model="signup_input.email">
         </div>
-          
+
         <div class="form-row">
-          <input type="password" class="text-input--underbar width-full" placeholder="再輸入一次密碼" value="">
+            <input type="password" class="text-input--underbar width-full" placeholder="設定密碼" ng-model="signup_input.password">
+        </div>
+
+        <div class="form-row">
+            <input type="password" class="text-input--underbar width-full" placeholder="再輸入一次密碼" ng-model="signup_input.password_confirm">
         </div>
 
         <div class="lucent">
-          <p class="note">密碼最少六個字</p>
+            <p class="note">密碼最少六個字</p>
         </div>
 
         <div class="vspc form-row">
-          <ons-button modifier="large--cta">註冊</ons-button>
+            <ons-button modifier="large--cta" ng-click="reg()">註冊</ons-button>
         </div>
-      </div>
+    </div>
 
-    </ons-page>
+</ons-page>
