--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -15,16 +15,16 @@
 
 
     <ons-list>
-        <ons-list-item modifier="chevron" class="list-item-container" ng-repeat=" a in [1,2,3,4,5,6]" ng-click="gotoStore()">
+        <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)">
             <div class="list-item-left">
                 <img src="http://fakeimg.pl/50x50/" class="avator">
             </div>
             <div class="list-item-right">
                 <div class="list-item-content">
-                    <div class="name">清心小港店
-                        <span class="lucent">1km</span>
+                    <div class="name">{{shop.company + shop.name}}
+                        <span class="lucent">{{distance(shop)}}km</span>
                     </div>
-                    <div class="desc">高雄市小港區xx路xx號</div>
+                    <div class="desc">{{shop.address}}</div>
                 </div>
             </div>
         </ons-list-item>
