--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -6,9 +6,9 @@
 
     <ons-list modifier="inset"> 
     <ons-list-header>詳細資料</ons-list-header>
-        <ons-list-item>店名 {{sotreData.name}}</ons-list-item>
-        <ons-list-item>地址 {{sotreData.address}}</ons-list-item>
-        <ons-list-item>電話 {{sotreData.phone}}</ons-list-item>
+        <ons-list-item>店名 {{storeData.name}}</ons-list-item>
+        <ons-list-item>地址 {{storeData.address}}</ons-list-item>
+        <ons-list-item>電話 {{storeData.phone}}</ons-list-item>
         <ons-list-item modifier="chevron" ng-click="gotoMenu()">看菜單</ons-list-item>
         
         <ons-list-item modifier="chevron" ng-click="addComment()">撰寫評論</ons-list-item>
@@ -16,7 +16,7 @@
 
     <ons-list class="timeline" modifier="inset">
         <ons-list-header>熱門評論</ons-list-header>
-        <ons-list-item class="timeline-li" modifier="tappable" ng-repeat="i in [1,2,3,4]">
+        <ons-list-item class="timeline-li" modifier="tappable" ng-repeat="c in comments">
             <ons-row>
                 <ons-col width="50px">
                     <img src="http://fakeimg.pl/40x40/" class="timeline-image">
@@ -26,11 +26,11 @@
                     <div class="timeline-date">3分鐘前</div>
                     <div class="timline-from">
                         <span class="timeline-name">某位評論者</span>
-                        <span class="timeline-id">五顆星</span>
+                        <span class="timeline-id">{{c.star}}</span>
                     </div>
 
                     <div class="timeline-message">
-                        飲料很好喝，外送服務很快
+                        {{c.message}}
                     </div>
                 </ons-col>
             </ons-row>
