--- a/templates/store/store_addcomment.html
+++ b/templates/store/store_addcomment.html
@@ -12,27 +12,23 @@
             </ons-col>
             <ons-col>
               <div class="to-name">李曉明</div>
-              <div class="to-email">五十嵐中正店評論</div>
+              <div class="to-email">{{shopname}}的評論</div>
             </ons-col>
           </ons-row>
         </ons-list-item>
         <ons-list-item>
-          <textarea class="textarea textarea--transparent" placeholder="Message" style="width: 100%; height: 100px;"></textarea>
+          <textarea class="textarea textarea--transparent" placeholder="Message" style="width: 100%; height: 100px;" ng-model="message"></textarea>
         </ons-list-item>
 
         <ons-list-item >
-          <ons-icon icon="ion-star" style="opacity:0.2"></ons-icon>
-          <ons-icon icon="ion-star" style="opacity:0.2"></ons-icon>
-          <ons-icon icon="ion-star" style="opacity:0.2"></ons-icon>
-          <ons-icon icon="ion-star" style="opacity:0.2"></ons-icon>
-          <ons-icon icon="ion-star" style="opacity:0.2"></ons-icon>
+          <input type="range" class="range" ng-model="star" min="0" max="5" step="1">
         </ons-list-item>
 
       </ons-list>
 
       <div style="padding: 10px 9px">
-        <ons-button modifier="large" style="margin: 0 auto;">
-          Send
+        <ons-button modifier="large" style="margin: 0 auto;" ng-click="sendComment()">
+          送出
         </ons-button>
       </div>
 
