準備要做修改個人資料的部分

--- a/templates/setting/editprofile.html
+++ b/templates/setting/editprofile.html
@@ -4,6 +4,13 @@
         <div class="center">個人資料</div>
     </ons-toolbar>
 
-    
+    <div class="login-form">
+
+        <input type="text" class="text-input--underbar" ng-model="name">
+        
+        <ons-button modifier="large" class="login-button">修改名稱</ons-button>
+        
+      </div>
+
 
 </ons-page>
