--- a/templates/setting/setting.html
+++ b/templates/setting/setting.html
@@ -11,8 +11,8 @@
         </ons-col>
 
         <ons-col>
-            <div class="profile-name">李曉明</div>
-            <div class="profile-email">快來與我一起喝飲料</div>
+            <div class="profile-name">{{nickname}}</div>
+            <div class="profile-email">{{email}}</div>
         </ons-col>
     </ons-row>
     <ons-list modifier="inset">
