回報的功能做正確，可以修改個人資料了

--- a/templates/drink_menu/drinkmenu.html
+++ b/templates/drink_menu/drinkmenu.html
@@ -9,7 +9,11 @@
         </div>
     </ons-toolbar>
     
-    <div class="notify info"><span>飲品項目、價格以實際店家為準</span><span>如果你發現項目價格有所不同，可以點選左邊的紙飛機回報給我們知道。</span><i class="ion-paper-airplane"></i></div>
+    <div class="notify info">
+        <span>飲品項目、價格以實際店家為準</span>
+        <span>如果你發現項目價格有所不同，可以點選左邊的紙飛機回報給我們知道。</span>
+        <i ng-click="gotoReport()" class="ion-paper-airplane"></i>
+    </div>
 
     <ons-list modifier="inset">
 
