--- a/styles/app.css
+++ b/styles/app.css
@@ -61,6 +61,35 @@ input[type=password] {
 .near_map {
     width: 100%;
     height: 300px;
+    position: fixed !important;
+    z-index: 15;
+    transition: .5s all;
+}
+
+.near_list {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: transparent;
+    z-index: 10;
+    width: 100%;
+}
+
+.near_item1 {
+    opacity: 0;
+    height: 300px;
+}
+
+.near_item_active {
+    background-color: cadetblue;
+}
+
+.near_button {
+    position: fixed;
+    top: 300px;
+    right: 10px;
+    z-index: 20;
+    transition: .5s all;
 }
 
 .list-item-container.list-item-container {
