--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -24,7 +24,7 @@
             </div>
             <div class="list-item-right">
                 <div class="list-item-content">
-                    <div class="name">{{shop.company + shop.name}}
+                    <div class="name">{{shop.company_name + shop.name}}
                         <span class="lucent">{{distance(shop)}}km</span>
                     </div>
                     <div class="desc">{{shop.address}}</div>
