--- a/styles/app.css
+++ b/styles/app.css
@@ -60,12 +60,10 @@ input[type=password] {
 
 .near_map {
     width: 100%;
-    height: 300px;
-    position: fixed !important;
-    z-index: 15;
-    transition: .5s all;
+    height: 270px;
 }
 
+/*
 .near_list {
     position: absolute;
     left: 0px;
@@ -79,11 +77,13 @@ input[type=password] {
     opacity: 0;
     height: 300px;
 }
+*/
 
 .near_item_active {
-    background-color: cadetblue;
+    background-color: #ddd;
 }
 
+/*
 .near_button {
     position: fixed;
     top: 300px;
@@ -91,6 +91,7 @@ input[type=password] {
     z-index: 20;
     transition: .5s all;
 }
+*/
 
 .list-item-container.list-item-container {
     line-height: 1;
