再試試看一種 style

--- a/styles/app.css
+++ b/styles/app.css
@@ -59,14 +59,14 @@ input[type=password] {
 /*附近搜巡頁面*/
 
 .near_map {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
-    margin: 10px auto;
+  width: 100%;
+  height: 240px;
 }
 
 .near_buttons {
-    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 10px;
 }
 /*
 .near_list {
