註冊錯誤的資訊以及登入錯誤的資訊整合

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -4,6 +4,9 @@
         <h1>Order Drink</h1>
         <input type="text" class="text-input--underbar" placeholder="Email" value="" ng-model="login_input.email">
         <input type="password" class="text-input--underbar" placeholder="密碼" value="" ng-model="login_input.password">
+        <div class="lucent">
+            <p class="note signup_note">{{message}}</p>
+        </div>
         <br>
         <br>
         <ons-button modifier="large" class="login-button" ng-click="login()">登入</ons-button>
