--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -14,9 +14,9 @@
     </ons-toolbar>
     <div id="googlemap" class="near_map"></div>
     <div class="near_buttons">
-        <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">瞧菜單</button>
+        <button class="button near_button" ng-disabled="!nowShop" ng-click="lookMenu()">瞧菜單</button>
         <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">看評論</button>
-        <button class="button near_button" ng-disabled="!nowShop" ng-click="gotoStore()">打電話</button>
+        <button class="button near_button" ng-disabled="!nowShop" ng-click="callShop()">打電話</button>
     </div>
 
     <ons-scroller ng-style="style">
