--- a/styles/app.css
+++ b/styles/app.css
@@ -55,6 +55,10 @@ input[type=password] {
     width: 90%;
     margin: 50px auto 0px auto;
 }
+
+.signup_note{
+    color: #e2613c;
+}
 /*註冊頁面*/
 /*附近搜巡頁面*/
 
@@ -65,8 +69,8 @@ input[type=password] {
 
 .near_buttons {
     position: absolute;
-    top: 0;
-    left: 10px;
+    top: 5px;
+    left: 5px;
 }
 /*
 .near_list {
