--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -1,5 +1,12 @@
 <ons-page ng-controller="signup">
+    <ons-toolbar>
 
+        <div class="left">
+            <ons-back-button>Back</ons-back-button>
+        </div>
+        <div class="center">註冊帳號</div>
+
+    </ons-toolbar>
     <div class="formarea">
 
         <div class="form-row">
@@ -11,19 +18,19 @@
         </div>
 
         <div class="form-row">
-            <input type="password" class="text-input--underbar width-full" placeholder="設定密碼" ng-model="signup_input.password">
+            <input type="password" class="text-input--underbar width-full" placeholder="設定密碼(6個字以上)" ng-model="signup_input.password">
         </div>
 
         <div class="form-row">
-            <input type="password" class="text-input--underbar width-full" placeholder="再輸入一次密碼" ng-model="signup_input.password_confirm">
+            <input type="password" class="text-input--underbar width-full" placeholder="確認密碼" ng-model="signup_input.password_confirm">
         </div>
 
         <div class="lucent">
-            <p class="note">密碼最少六個字</p>
+            <p class="note signup_note">{{message}}</p>
         </div>
 
         <div class="vspc form-row">
-            <ons-button modifier="large--cta" ng-click="reg()">註冊</ons-button>
+            <ons-button modifier="large" ng-click="reg()">註冊</ons-button>
         </div>
     </div>
 
