菜單的版本丟上去，不同飲料電的資訊

--- a/templates/drink_menu/drinkmenu.html
+++ b/templates/drink_menu/drinkmenu.html
@@ -33,6 +33,8 @@
             </div>
         </ons-list-item>
     </ons-list>
+    
+    <div>{{message}}</div>
 
 
     <ons-modal var="drinkmenu_modal">
