--- a/templates/setting/editprofile.html
+++ b/templates/setting/editprofile.html
@@ -21,5 +21,7 @@
         </ons-button>
         <div class="message_alert">{{message}}</div>
     </div>
-
+    <div od-user="user_id" type="avatar" style="width:100px;height:100px;"></div>
+<!--    <input id="myFileInput" type="file" accept="image/*;capture=camera">-->
+    <input type="file" name="file" accept="image/*;capture=camera" onchange="angular.element(this).scope().uploadFile(this.files)"/>
 </ons-page>
