使用者上傳大頭照的部分

--- a/templates/setting/editprofile.html
+++ b/templates/setting/editprofile.html
@@ -6,6 +6,8 @@
         <div class="center">個人資料</div>
     </ons-toolbar>
 
+
+<!--
     <ons-list modifier="inset" style="margin-top: 10px">
 
         <ons-list-item>
@@ -17,11 +19,12 @@
 
     <div style="padding: 10px 9px">
         <ons-button modifier="large" style="margin: 0 auto;" ng-click="changeName()">
-            修改名稱
+            修改個人資訊
         </ons-button>
         <div class="message_alert">{{message}}</div>
     </div>
     <div od-user="user_id" type="avatar" style="width:100px;height:100px;"></div>
-<!--    <input id="myFileInput" type="file" accept="image/*;capture=camera">-->
+    <input id="myFileInput" type="file" accept="image/*;capture=camera">
     <input type="file" name="file" accept="image/*;capture=camera" onchange="angular.element(this).scope().uploadFile(this.files)"/>
+-->
 </ons-page>
