--- a/templates/store/store_addcomment.html
+++ b/templates/store/store_addcomment.html
@@ -8,7 +8,7 @@
         <ons-list-item class="to-wrapper">
           <ons-row>
             <ons-col width="52px">
-              <img src="http://fakeimg.pl/50x50/" width="42" class="to-image">
+                <div class="to-image" back-img="{{avatar_thumb}}"></div>
             </ons-col>
             <ons-col>
               <div class="to-name">{{nickname}}</div>
