--- a/styles/app.css
+++ b/styles/app.css
@@ -167,7 +167,7 @@ input[type=password] {
     width: 40px;
     height: 40px;
     border-radius: 4px;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border: none
@@ -375,3 +375,83 @@ input[type=password] {
     text-shadow: 0px 1px 1px #fdfeff;
 }
 /*notification*/
+/*edit profile*/
+
+.eprofile-card {
+    width: 100%;
+    text-align: center;
+    color: white;
+    padding: 30px 0;
+    line-height: 1.4;
+    background-color: #33393c;
+    text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
+}
+
+.eprofile-image {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background-color: black;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.eprofile-label {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.eprofile-file {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    font-size: 1;
+    width: 0%;
+    height: 100%;
+    visibility: hidden;
+}
+
+.eprofile-name {
+    margin: 20px 0 0 0;
+    font-weight: 600;
+    font-size: 17px;
+}
+
+.eprofile-id {
+    margin: 0 0 5px 0;
+    font-size: 14px;
+    opacity: 0.6;
+}
+
+.eprofile-desc {
+    font-size: 15px;
+    opacity: 0.6;
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.info-col {
+    height: 60px;
+    line-height: 1;
+    padding: 12px 0 12px 4px;
+}
+
+.info-num {
+    font-size: 16px;
+    font-weight: 500;
+    opacity: 0.8;
+}
+
+.info-unit {
+    margin-top: 6px;
+    font-size: 14px;
+    opacity: 0.4;
+}
+/*edit profile*/
