--- a/styles/app.css
+++ b/styles/app.css
@@ -4,7 +4,6 @@ textarea,
     -webkit-user-select: text;
     user-select: text;
 }
-
 /*登入頁面*/
 
 .login-form {
@@ -388,10 +387,11 @@ input[type=password] {
     width: 100%;
     text-align: center;
     color: white;
-    padding: 30px 0;
+    padding: 15px 0;
     line-height: 1.4;
     background-color: #33393c;
     text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
+    position: relative;
 }
 
 .eprofile-image {
@@ -404,12 +404,46 @@ input[type=password] {
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
     position: relative;
     margin: 0 auto;
+    transition: .2s all;
 }
 
-.eprofile-label {
+.eprofile-image.loading {
+    margin: 40px auto;
+}
+
+.eprofile-image.loading:after {
+    content: '';
+    background: trasparent;
+    width: 140%;
+    height: 140%;
+    position: absolute;
+    border-radius: 100%;
+    top: -20%;
+    left: -20%;
+    opacity: 0.7;
+    box-shadow: rgba(255, 255, 255, 0.6) -4px -5px 3px -3px;
+    animation: rotate 2s infinite linear;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+.eprofile-label-avatar {
     display: block;
     width: 100%;
     height: 100%;
+}
+
+.eprofile-label-background {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .eprofile-file {
@@ -424,16 +458,50 @@ input[type=password] {
     visibility: hidden;
 }
 
+.eprofile-shadow {
+    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+    /* FF3.6+ */
+    
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(100%, rgba(0, 0, 0, 0.65)));
+    /* Chrome,Safari4+ */
+    
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+    /* Chrome10+,Safari5.1+ */
+    
+    background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+    /* Opera 11.10+ */
+    
+    background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+    /* IE10+ */
+    
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+    /* W3C */
+    
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
+    /* IE6-9 */
+    
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    left: 0;
+    bottom: 0;
+}
+
 .eprofile-name {
-    margin: 20px 0 0 0;
+    margin: 10px 0;
     font-weight: 600;
-    font-size: 17px;
+    font-size: 27px;
+    line-height: 27px;
+    position: relative;
+    z-index: 5;
 }
 
 .eprofile-id {
     margin: 0 0 5px 0;
     font-size: 14px;
     opacity: 0.6;
+    position: relative;
+    z-index: 6;
 }
 
 .eprofile-desc {
