修正背景修改不好點選的問題

--- a/templates/setting/setting.html
+++ b/templates/setting/setting.html
@@ -9,7 +9,7 @@
     <div class="eprofile-card" back-img="{{background}}">
         <div class="eprofile-shadow"></div>
         <label for="fileBackground" class="eprofile-label-background">
-            <ons-icon icon="ion-ios-color-wand"></ons-icon>
+            <ons-icon icon="ion-ios-color-wand" size="25px"></ons-icon>
             <input class="eprofile-file" id="fileBackground" type="file" name="file" accept="image/*;capture=camera" onchange="angular.element(this).scope().uploadBackground(this.files)" />
         </label>
 
