--- a/styles/app.css
+++ b/styles/app.css
@@ -387,7 +387,7 @@ input[type=password] {
     width: 100%;
     text-align: center;
     color: white;
-    padding: 15px 0;
+    padding: 30px 0;
     line-height: 1.4;
     background-color: #33393c;
     text-shadow: rgba(0, 0, 0, 0.4) 0px 1px 0px;
@@ -443,7 +443,10 @@ input[type=password] {
 .eprofile-label-background {
     position: absolute;
     top: 10px;
-    right: 10px;
+    right: 0px;
+    z-index: 6;
+    width: 50px;
+    height: 50px;
 }
 
 .eprofile-file {
@@ -488,7 +491,7 @@ input[type=password] {
 }
 
 .eprofile-name {
-    margin: 10px 0;
+    margin: 20px 0 10px 0;
     font-weight: 600;
     font-size: 27px;
     line-height: 27px;
