--- a/styles/app.css
+++ b/styles/app.css
@@ -423,9 +423,19 @@ input[type=password] {
     opacity: 0.7;
     box-shadow: rgba(255, 255, 255, 0.6) -4px -5px 3px -3px;
     animation: rotate 2s infinite linear;
+    -webkit-animation: rotate 2s infinite linear;
 }
 
 @keyframes rotate {
+    0% {
+        transform: rotateZ(0deg);
+    }
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
+@-webkit-keyframes rotate {
     0% {
         transform: rotateZ(0deg);
     }
