--- a/styles/app.css
+++ b/styles/app.css
@@ -399,7 +399,7 @@ input[type=password] {
     width: 100px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
-    background-color: black;
+    background-color: rgba(50,50,50,.5);
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
     position: relative;
@@ -437,10 +437,10 @@ input[type=password] {
 
 @-webkit-keyframes rotate {
     0% {
-        transform: rotateZ(0deg);
+        -webkit-transform: rotateZ(0deg);
     }
     100% {
-        transform: rotateZ(360deg);
+        -webkit-transform: rotateZ(360deg);
     }
 }
 
@@ -452,11 +452,15 @@ input[type=password] {
 
 .eprofile-label-background {
     position: absolute;
-    top: 10px;
+    top: 0px;
     right: 0px;
-    z-index: 6;
+    z-index: 10;
     width: 50px;
     height: 50px;
+}
+
+.background-icon{
+margin-top: 10px;
 }
 
 .eprofile-file {
