--- a/styles/app.css
+++ b/styles/app.css
@@ -132,8 +132,9 @@ input[type=password] {
 .avator {
     width: 40px;
     height: 40px;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
+    border-radius: 40px;
+    box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+    background-color: rgba(0,0,0,.3);
 }
 
 .name {
@@ -399,7 +400,7 @@ input[type=password] {
     width: 100px;
     border-radius: 50%;
     -webkit-border-radius: 50%;
-    background-color: rgba(50,50,50,.5);
+    background-color: rgba(50, 50, 50, .5);
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
     -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 0px 0px;
     position: relative;
@@ -459,8 +460,8 @@ input[type=password] {
     height: 50px;
 }
 
-.background-icon{
-margin-top: 10px;
+.background-icon {
+    margin-top: 10px;
 }
 
 .eprofile-file {
