--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -23,7 +23,7 @@
         <ons-list class="near_list">
             <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.$loki}">
                 <div class="list-item-left">
-                    <img ng-src="{{shopAvatar(shop.company_id)}}" class="avator">
+                    <div back-img="{{shopAvatar(shop.company_id)}}" local="true" class="avator"></div>
                 </div>
                 <div class="list-item-right">
                     <div class="list-item-content">
