新增喜好店家

--- a/templates/setting/setting.html
+++ b/templates/setting/setting.html
@@ -24,20 +24,11 @@
 
     </div>
 
-    <!--
-    <ons-row class="profile-wrapper">
-        <ons-col width="60px" class="profile-image-wrapper">
-            <img src="https://unsplash.it/50/50/?random" class="profile-image">
-        </ons-col>
+    <ons-list modifier="inset" style="margin-top: 10px">
+        <ons-list-item modifier="chevron" ng-click="goFavoriteDrink()">
+            編輯喜好店家
+        </ons-list-item>
 
-        <ons-col>
-            <div class="profile-name">{{nickname}}</div>
-            <div class="profile-email">{{email}}</div>
-        </ons-col>
-    </ons-row>
-    <ons-list modifier="inset">
-        <ons-list-item ng-click="gotoEditProfile()">編輯個人資料</ons-list-item>
     </ons-list>
--->
 
 </ons-page>
