--- a/styles/app.css
+++ b/styles/app.css
@@ -4,6 +4,16 @@ textarea,
     -webkit-user-select: text;
     user-select: text;
 }
+
+.noti_all {
+    font-size: 14px;
+    margin: 10px;
+}
+.noti_all_red{
+    font-size: 14px;
+    margin: 10px;
+    color: #e2613c;
+}
 /*登入頁面*/
 
 .login-form {
@@ -133,8 +143,8 @@ input[type=password] {
     width: 40px;
     height: 40px;
     border-radius: 40px;
-    box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
-    background-color: rgba(0,0,0,.3);
+    box-shadow: 0px 0px 7px -2px rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, .3);
 }
 
 .name {
