--- a/templates/setting/favoritedrink.html
+++ b/templates/setting/favoritedrink.html
@@ -6,15 +6,19 @@
         <div class="center">設定喜歡的飲料店</div>
     </ons-toolbar>
     <div class="noti_all">在這邊你可以設定你喜歡的店家，以後我們就只會找到這些店家</div>
-    <ons-list modifier="inset">
-        <ons-list-item ng-repeat="comp in companies" modifie="tappable">
-            <label class="checkbox" style="width:100%;">
-                <input  type="checkbox" checklist-model="favoriteCompany" checklist-value="comp.$loki">
+
+    <ul class="list list--inset">
+        <li class="list__item list__item--inset" ng-repeat="comp in companies">
+            <label class="checkbox">
+                <input type="checkbox" checklist-model="favoriteCompany" checklist-value="comp.$loki">
                 <div class="checkbox__checkmark"></div>
                 {{comp.name}}
             </label>
-        </ons-list-item>
-    </ons-list>
+        </li>
+
+    </ul>
+
+
     <div class="noti_all_red" ng-bind="message"></div>
     <div style="padding: 10px 9px">
         <ons-button modifier="large" style="margin: 0 auto;" ng-click="sendFavorite()">
