service_user 重複取得資料問題 登入沒有把 Id 放進去的問題

--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -27,7 +27,7 @@
                 </ons-col>
 
                 <ons-col>
-                    <div class="timeline-date" am-time-ago="c.create_on"></div>
+                    <div class="timeline-date" am-time-ago="c.createdAt"></div>
                     <div class="timline-from">
                         <span class="timeline-name" od-user="c.user_id" type="name">某位評論者</span>
                         <!--                        <span class="timeline-id">{{c.star}}</span>-->
