--- a/templates/near/near.html
+++ b/templates/near/near.html
@@ -22,7 +22,7 @@
 
     <ons-scroller ng-style="style">
         <ons-list class="near_list">
-            <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.$loki}">
+            <ons-list-item modifier="chevron" class="list-item-container" ng-repeat="shop in shopList" ng-click="clickShop(shop)" ng-class="{'near_item_active':nowShop_id === shop.id}">
                 <div class="list-item-left">
                     <div back-img="{{shopAvatar(shop.company_id)}}" local="true" class="avator"></div>
                 </div>
