--- a/templates/store/store_addcomment.html
+++ b/templates/store/store_addcomment.html
@@ -24,7 +24,7 @@
 
         <ons-list-item>
             <!--<input type="range" class="range" ng-model="star" min="0" max="5" step="1">-->
-            <rating-star count="10" rating="star"></rating-star>
+            <star-rating ng-model="star"></star-rating>
             <span>{{star}} 顆星</span>
         </ons-list-item>
 
